--- a/compose_files/docker-compose.yml
+++ b/compose_files/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       context: ../../core-access-control/
     environment:
       - DB_URI=postgresql+psycopg2://access_control:password@db:5432/access_control
-      - ALLOWED_API_KEYS=demo-authentication-service-api-key,demo-authentication-service-celery-api-key,demo-management-layer-api-key
+      - ALLOWED_API_KEYS=demo-authentication-service-api-key,demo-authentication-service-celery-api-key,demo-management-layer-api-key,demo-eventd-api-key
       # - SENTRY_DSN=<sentry_dsn_goes_here>
     volumes:
       - "../../core-access-control/:/app/"
@@ -173,6 +173,37 @@ services:
     depends_on:
       - core-authentication-service
       - core-management-layer
+    networks:
+      - oidcnetwork
+
+  core-eventd:
+    build:
+      context: ../../core-eventd/
+    environment:
+      - MAPPING_REFRESH_SLEEP_SECONDS=60
+      - CACHE_TIME=60
+      - STUBS_CLASS=eventd.integration.Implementation
+      # - PYTHONASYNCIODEBUG=1
+      - ACCESS_CONTROL_API=http://core-access-control:8080/api/v1
+      - WITH_UI=false
+      - UI_HOST=core-eventd
+      - ACCESS_CONTROL_API_KEY=demo-eventd-api-key
+      - REDIS=redis://redis:6379/4
+      # - SENTRY_DSN=<sentry_dsn_goes_here>
+    volumes:
+      - "../../core-eventd/:/app/"
+    ulimits:
+       nproc: 65535
+       nofile:
+         soft: 20000
+         hard: 40000
+    depends_on:
+      - redis
+      - core-access-control
+    restart: on-failure
+    # For mocking:
+    # command: ./prism run --validate --debug --list --mockDynamic -s ./swagger/eventd.yml -p 8080
+    command: httpd.py --logging=debug
     networks:
       - oidcnetwork
 
