Enabled Kinesis producer

--- a/compose_files/docker-compose.yml
+++ b/compose_files/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       - EMAIL_HOST=smtp
       # Migrations can no longer be run without a specific env var being set specifically for it.
       - SKIP_MIGRATIONS=1
+      - USE_KINESIS_PRODUCER=true
       - KINESIS_SESSION=aws_access_key_id=foobar,aws_secret_access_key=foobar,region_name=us-east-1
       - KINESIS_PRODUCER=stream_name=test-stream
       - KINESIS_BOTO3_CLIENT_SETTINGS=endpoint_url=http://localstack:4568
